applications/website-revision/website/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/permanent-redirect: https://www.mindspore.cn$request_uri
  name: mindspore-website-ingress
  namespace: website-revision
spec:
  tls:
  - hosts:
      - mindspore.cn
    secretName: website-tls
  rules:
    - host: mindspore.cn
